--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
 				background-color: black;
 			}
 		</style>
+		<link rel="shortcut icon" href="#" />
 	</head>
 	<body>
 		<canvas id="canvas"></canvas>
+		<audio src="resources/audio/pop1.wav" id="good-pop" class="audio"></audio>
+		<audio src="resources/audio/pop2.wav" id="bad-pop" class="audio"></audio>
+		<audio
+			src="resources/audio/level-up1.wav"
+			id="level-up"
+			class="audio"
+		></audio>
+		<audio src="resources/audio/zap1.wav" id="zapp" class="audio"></audio>
+		<audio
+			src="resources/audio/explode1.wav"
+			id="explode"
+			class="audio"
+		></audio>
+		<audio src="resources/audio/death1.wav" id="death" class="audio"></audio>
 		<script src="js/classes/missile.js"></script>
 		<script src="js/classes/mine.js"></script>
 		<script src="js/classes/popper.js"></script>
