--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 				margin: 0;
 				padding: 0;
 				background-color: black;
+				cursor: crosshair;
 			}
 		</style>
 		<link rel="shortcut icon" href="#" />
