disabled scrolling on page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 				padding: 0;
 				background-color: black;
 				cursor: crosshair;
+				overflow: hidden;
 			}
 		</style>
 		<link rel="shortcut icon" href="#" />
