bonusses added when popped value is > 20000

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			class="audio"
 		></audio>
 		<audio src="resources/audio/death1.wav" id="death" class="audio"></audio>
+		<audio src="resources/audio/bonus1.wav" id="bonus" class="audio"></audio>
 		<script src="js/classes/missile.js"></script>
 		<script src="js/classes/mine.js"></script>
 		<script src="js/classes/popper.js"></script>
