added nukes, poppers less frequent

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 		></audio>
 		<audio src="resources/audio/death1.wav" id="death" class="audio"></audio>
 		<audio src="resources/audio/bonus1.wav" id="bonus" class="audio"></audio>
+		<audio src="resources/audio/nuke1.wav" id="nuke" class="audio"></audio>
 		<script src="js/classes/missile.js"></script>
-		<script src="js/classes/mine.js"></script>
 		<script src="js/classes/popper.js"></script>
+		<script src="js/classes/mine.js"></script>
 		<script src="js/classes/bubble.js"></script>
+		<script src="js/classes/nuke.js"></script>
 		<script src="js/classes/game.js"></script>
 		<script src="js/main.js"></script>
 	</body>
